--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node server.js"
   },
   "author": "Chatpeth",
-  "license": "ISC"
-
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.15.2"
+  }
 }
